back to step 1 and validate description

--- a/app/src/main/res/layout/activity_create_appointment_activitiy.xml
+++ b/app/src/main/res/layout/activity_create_appointment_activitiy.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         app:cardBackgroundColor="@color/transparent"
-        android:visibility="gone">
+        android:visibility="visible">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,6 +58,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"/>
                     <EditText
+                        android:id="@+id/etDescription"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text" />
@@ -82,6 +83,7 @@
                         android:padding="8dp">
 
                         <RadioButton
+                            android:checked="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/tipo_cita_1"/>
@@ -114,7 +116,7 @@
         android:layout_weight="16"
         android:layout_marginBottom="12dp"
         app:cardBackgroundColor="@color/transparent"
-        android:visibility="visible">
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
