--- a/app/src/main/res/layout/item_appointment.xml
+++ b/app/src/main/res/layout/item_appointment.xml
@@ -13,7 +13,7 @@
     tools:ignore="Autofill,LabelFor"
     app:cardElevation="4dp"
     app:cardCornerRadius="3dp"
-    tools:context=".MenuActivity"
+    tools:context=".ui.MenuActivity"
     >
     <LinearLayout
         android:layout_width="match_parent"
