--- a/app/src/main/res/values/strings_es.xml
+++ b/app/src/main/res/values/strings_es.xml
@@ -42,4 +42,5 @@
     <string name="no_se_pudo_cargar_horas">No se han podido cargar las horas.</string>
     <string name="seleccione_medico_y_fecha_">seleccione un medico y una fecha para ver sus horas disponibles</string>
     <string name="no_se_encontraron_horas_disponibles">No se encontraron horas disponibles para el medico en el dia seleccionado.</string>
+    <string name="confirmar_contraseña">Confirmar contraseña</string>
 </resources>
