--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -15,10 +15,10 @@
         android:textStyle="bold"
         android:textSize="25sp"
         android:text="@string/label_mis_citas_medicas"/>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAppointments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_appointment">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
