--- a/app/src/main/res/layout/card_view_step_one.xml
+++ b/app/src/main/res/layout/card_view_step_one.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             app:contentPadding="12dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
@@ -79,7 +79,7 @@
                 </RadioGroup>
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
         <Button
             android:id="@+id/btnNext"
             android:text="@string/btn_siguiente"
@@ -88,4 +88,4 @@
             android:layout_height="55dp"
             />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
