--- a/app/src/main/res/layout/card_view_step_three.xml
+++ b/app/src/main/res/layout/card_view_step_three.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,13 +9,14 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     app:cardBackgroundColor="@color/transparent"
-    android:visibility="gone">
+    android:visibility="gone"
+    tools:visibility="visible">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             app:contentPaddingTop="12dp"
             app:contentPaddingLeft="12dp"
             app:contentPaddingRight="12dp"
@@ -148,7 +149,7 @@
 
                 </LinearLayout>
             </ScrollView>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
         <Button
             android:id="@+id/btnConfirmAppointment"
@@ -158,4 +159,4 @@
             android:layout_height="50dp"
             />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
