--- a/app/src/main/res/values/strings_es.xml
+++ b/app/src/main/res/values/strings_es.xml
@@ -43,4 +43,5 @@
     <string name="seleccione_medico_y_fecha_">seleccione un medico y una fecha para ver sus horas disponibles</string>
     <string name="no_se_encontraron_horas_disponibles">No se encontraron horas disponibles para el medico en el dia seleccionado.</string>
     <string name="confirmar_contraseña">Confirmar contraseña</string>
+    <string name="msg_token_fmt">___El Token es:</string>
 </resources>
