--- a/app/src/main/res/values/strings_es.xml
+++ b/app/src/main/res/values/strings_es.xml
@@ -5,7 +5,7 @@
     <string name="label_correo">Correo electronico</string>
     <string name="contrase_a">Contraseña</string>
     <string name="login_boton_entrar">Ingresar</string>
-    <string name="login_texto_no_registrado">Aun no te has registrado?</string>
+    <string name="login_texto_no_registrado">Aun no te has registrado? Haz click aqui!</string>
     <string name="login_texto_ya_registrado">Y tienes cuenta? click aqui.</string>
     <string name="toast_completa_tus_datos">Por favor, completa tus datos</string>
     <string name="menu_mis_citas">Mis citas</string>
