--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,7 @@
         <item name="android:paddingRight">40dp</item>
         <item name="android:layout_width">match_parent</item>
     </style>
+    <style name="SplashTheme" parent="Theme.Caboconsultas">
+        <item name="android:windowBackground">@drawable/splashscreen</item>
+    </style>
 </resources>
